tests/baselines/reference/widenToAny1.errors.txt
widenToAny1.ts(4,39): error TS2322: Type 'string' is not assignable to type 'number'.


==== widenToAny1.ts (1 errors) ====
    function foo1<T>(f1: { x: T; y: T }): T {
        return undefined;
    }
    var z1: number = foo1({ x: undefined, y: "def" });  // Best common type is any
                                          ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 widenToAny1.ts:1:30: The expected type comes from property 'y' which is declared here on type '{ x: number; y: number; }'
    